--- a/Vista/Vista/Vista.csproj
+++ b/Vista/Vista/Vista.csproj
@@ -45,14 +45,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AdministrarSolicitud.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AdministrarSolicitud.Designer.cs">
+      <DependentUpon>AdministrarSolicitud.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BusquedaInsumo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BusquedaInsumo.Designer.cs">
+      <DependentUpon>BusquedaInsumo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SolicitudSuministro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SolicitudSuministro.Designer.cs">
+      <DependentUpon>SolicitudSuministro.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AdministrarSolicitud.resx">
+      <DependentUpon>AdministrarSolicitud.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BusquedaInsumo.resx">
+      <DependentUpon>BusquedaInsumo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +80,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SolicitudSuministro.resx">
+      <DependentUpon>SolicitudSuministro.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
