--- a/Vista/AccesoDatos/AccesoDatos.csproj
+++ b/Vista/AccesoDatos/AccesoDatos.csproj
@@ -55,9 +55,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProductoDA.cs" />
     <Compile Include="ProveedorDA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolicitudSuministroDA.cs" />
+    <Compile Include="UnidadMedidaDA.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Modelo\Modelo.csproj">
