--- a/Vista/Controlador/Controlador.csproj
+++ b/Vista/Controlador/Controlador.csproj
@@ -40,9 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProductoBL.cs" />
     <Compile Include="ProveedorBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolicitudSuministroBL.cs" />
+    <Compile Include="UnidadMedidaBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccesoDatos\AccesoDatos.csproj">
