--- a/Vista/Modelo/Modelo.csproj
+++ b/Vista/Modelo/Modelo.csproj
@@ -41,9 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DetalleSolicitudSuministro.cs" />
+    <Compile Include="Insumo.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Proveedor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolicitudSuministro.cs" />
+    <Compile Include="UnidadMedida.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
