--- a/Vista/Vista/Vista.csproj
+++ b/Vista/Vista/Vista.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +58,18 @@
     <Compile Include="BusquedaInsumo.Designer.cs">
       <DependentUpon>BusquedaInsumo.cs</DependentUpon>
     </Compile>
+    <Compile Include="fmrBusquedaProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fmrBusquedaProducto.Designer.cs">
+      <DependentUpon>fmrBusquedaProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmGestionProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionProductos.Designer.cs">
+      <DependentUpon>frmGestionProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="SolicitudSuministro.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +83,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BusquedaInsumo.resx">
       <DependentUpon>BusquedaInsumo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fmrBusquedaProducto.resx">
+      <DependentUpon>fmrBusquedaProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGestionProductos.resx">
+      <DependentUpon>frmGestionProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
