--- a/Vista/AccesoDatos/AccesoDatos.csproj
+++ b/Vista/AccesoDatos/AccesoDatos.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InsumoDA.cs" />
     <Compile Include="ProductoDA.cs" />
     <Compile Include="ProveedorDA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
