--- a/Vista/Modelo/Modelo.csproj
+++ b/Vista/Modelo/Modelo.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DetalleSolicitudSuministro.cs" />
+    <Compile Include="Empleado.cs" />
     <Compile Include="Insumo.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Proveedor.cs" />
