--- a/Vista/AccesoDatos/AccesoDatos.csproj
+++ b/Vista/AccesoDatos/AccesoDatos.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolicitudSuministroDA.cs" />
     <Compile Include="UnidadMedidaDA.cs" />
+    <Compile Include="UsuarioDA.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Modelo\Modelo.csproj">
