--- a/Vista/Controlador/Controlador.csproj
+++ b/Vista/Controlador/Controlador.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolicitudSuministroBL.cs" />
     <Compile Include="UnidadMedidaBL.cs" />
+    <Compile Include="UsuarioBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccesoDatos\AccesoDatos.csproj">
