--- a/Vista/Modelo/Modelo.csproj
+++ b/Vista/Modelo/Modelo.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolicitudSuministro.cs" />
     <Compile Include="UnidadMedida.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
